chore: prepara os arquivos para deploy

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@
 }
 
 .banner {
-    background-image: url('/public/assets/banner.webp');
+    background-image: url('/assets/banner.webp');
     background-position: bottom right;
     /* background-attachment: fixed; */
     background-size: cover;
