--- a/themes/ligapedd-v2/layouts/_default/baseof.html
+++ b/themes/ligapedd-v2/layouts/_default/baseof.html
@@ -2,7 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}" class="scroll-smooth">
 {{- partial "head.html" . -}}
 
-<body class="font-sans" x-data="app()" @resize.window="isOpenMenuMobile=false,isOpenMenuMais=false">
+<body class="font-sans" x-data="app()" @resize.window="isOpenMenuMobile=false,isOpenMenuMais=false" x-init="atualInicio={{ cond (.IsHome) "true" "false" }}">
     {{- partial "header.html" . -}}
 
     {{- block "main" . }}{{- end }}
