chore: adiciona página Breve e atualiza suas chamadas

--- a/themes/ligapedd-v2/layouts/partials/footer.html
+++ b/themes/ligapedd-v2/layouts/partials/footer.html
@@ -14,7 +14,7 @@
         </div>
         <div class="flex flex-col col-span-4 lg:col-span-1 gap-y-2">
             <h3 class="mt-6 text-base font-bold lg:mt-0 lg:mb-6">Dúvidas</h3>
-            <a href="breve.html" class="text-sm hover:underline" title="Ir para a página">Como se tornar membro</a>
+            <a href="breve/" class="text-sm hover:underline" title="Ir para a página">Como se tornar membro</a>
         </div>
         <div class="flex flex-col col-span-4 lg:col-span-1 gap-y-2">
             <h3 class="mt-6 text-base font-bold lg:mt-0 lg:mb-6">Redes Sociais e Contato</h3>
