fix: modifica diretório output para scripts

--- a/themes/ligapedd-v2/layouts/partials/footer.html
+++ b/themes/ligapedd-v2/layouts/partials/footer.html
@@ -47,4 +47,4 @@
 
 <script async defer data-website-id="29868ceb-31dc-421f-b304-ec2e83e72ce7" src="https://analytics-dc.vercel.app/umami.js"></script>
 <script src="https://unpkg.com/alpinejs@3.11.1/dist/cdn.min.js" defer></script>
-<script src="/js/scripts.js"></script>
+<script src="/scripts.js"></script>
